--- a/.github/runners/docker-compose.yml
+++ b/.github/runners/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.ci
-    image: localhost:5000/bolt-ci:latest
+    image: localhost:5000/bolt-ci:20251217
     command: ["/bin/bash", "-c", "Bolt CI Image"]
   conan_server:
     build:
