--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,7 +29,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  CONAN_HOME: /root/.conan2
   CCACHE_DIR: /data/ccache-data
   CCACHE_MAX_SIZE: '100G'
   CI_NUM_THREADS: "16"
@@ -58,7 +57,8 @@ jobs:
     if: ${{ needs.changes.outputs.source_changed == 'true' }}
     runs-on: [ self-hosted, medium ]
     container: 
-      image: bolt-registry:5000/bolt-ci:latest
+      image: bolt-registry:5000/bolt-ci:20251217
+      options: --user root
       volumes:
         - /data/ccache-data:/data/ccache-data
     services:
@@ -68,26 +68,43 @@ jobs:
           - /data/conan-server-data:/var/conan/data
     strategy:
       matrix: 
-        build_type: [ release ]
+        build_type: [ release, release_spark ]
     steps:
     - name: Checkout code
       uses: actions/checkout@v6
 
-    - name: Activate Python venv
-      run: echo "/root/venv/bin" >> $GITHUB_PATH
+    - id: env-setup
+      uses: ./.github/actions/bolt-build-base
 
-    - name: Add CI conan remote
-      run: |
-        conan remote add --index=0 ci http://conanserver:9300
-      
-    - name: Install Bolt dependencies
-      run: |
-        ./scripts/install-bolt-deps.sh
-
-    - name: Bolt Build
+    - name: Bolt build
       run: |
         make ${{ matrix.build_type }}_with_test
 
     - name: Run tests
       run: |
         make unittest_${{ matrix.build_type }}
+
+  benchmarks-build:
+      needs: changes
+      if: ${{ needs.changes.outputs.source_changed == 'true' }}
+      runs-on: [ self-hosted, medium ]
+      container: 
+        image: bolt-registry:5000/bolt-ci:20251217
+        volumes:
+          - /data/ccache-data:/data/ccache-data
+        options: --user root
+      services:
+        conanserver:
+          image: bolt-registry:5000/conan-server:latest
+          volumes:
+            - /data/conan-server-data:/var/conan/data
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - id: env-setup
+        uses: ./.github/actions/bolt-build-base
+
+      - name: Bolt build
+        run: |
+          make benchmarks-build
